--- a/Client/movieLibrary.css
+++ b/Client/movieLibrary.css
@@ -61,8 +61,14 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
 
+form {
+  text-align: center;
+}
+
 body {
+  height: 100%;
   margin: 0;
+  padding: 0;
   font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 0.9375rem;
   font-weight: 400;
@@ -205,7 +211,11 @@ figure {
 }
 
 img {
-  vertical-align: middle;
+  padding: 0;
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  max-width: 100%;
   border-style: none;
 }
 
